--- a/style.css
+++ b/style.css
@@ -108,9 +108,14 @@
     height: 40px;
   }
 .item-name{
-    display: flex;
     justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 1rem;
   }
+#item1Text{
+    text-align:left;
+}
   .value {
     font-weight: bold;
     font-size: 1.4rem;
