--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@
     width: auto;
     height: 40px;
   }
+#item1Text{
+    text-align:right;
+}
   #item2description{
     font-size:65%;
     margin:0;
@@ -107,6 +110,9 @@
     width: auto;
     height: 40px;
   }
+#item2Text{
+    text-align:right;
+}
 .item-name{
     justify-content: space-between;
     display: grid;
